styles/default.css
/* ... */
input, textarea, button {
    font-family: 'Open Sans', arial, sans-serif;
	font-size: 14px;
}

/* BUTTON
*******************************/

#right .info .button,
#right .profile .button {
    background:-webkit-linear-gradient(bottom, rgba(0, 124, 137, 0.2) 0%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.1) 50%, rgba(0, 124, 137, 0.1) 100%);
    background:-moz-linear-gradient(bottom, rgba(0, 124, 137, 0.2) 0%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.1) 50%, rgba(0, 124, 137, 0.1) 100%);
    background:-ms-linear-gradient(bottom, rgba(0, 124, 137, 0.2) 0%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.1) 50%, rgba(0, 124, 137, 0.1) 100%);
    background:-o-linear-gradient(bottom, rgba(0, 124, 137, 0.2) 0%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.1) 50%, rgba(0, 124, 137, 0.1) 100%);
    background:linear-gradient(bottom, rgba(0, 124, 137, 0.2) 0%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.1) 50%, rgba(0, 124, 137, 0.1) 100%);
    margin: 10px 0px 5px 24px;
    padding: 4px;
    border-radius: 10px;
    border: 1px solid rgba(128, 128, 128, 0.5);
    text-align: center;
    min-width: 60px;
    cursor: pointer;
}
#right .info .button:active,
#right .profile .button:active {
    background: rgba(0, 124, 137, 0.2);
}

/** TOP
 ****************************************************************************/

#top {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    position: absolute;
    height: 85px;
    padding: 26px;
    width: 100%;
    z-index: 10;
}
#top .profile {
    position: absolute;
    top: 10px;
    left: 10px;
    width: 200px;
    height: 66px;
    overflow: hidden;
    cursor: pointer;
    display: none;
}
#top .profile .picture {
    width: 64px;
    height: 64px;
    background-color: #FFF;
}
#top .profile .nickname {
    font-size: 14px;
    font-weight: bold;
    position: absolute;
    top: 20px;
    left: 69px;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
}
#top .search {
    display: inline-block;
    margin-left: 210px;  /* left column */
    padding-right: 34px; /* button width */
    position: relative;
}
#top .search input[type=text] {
    height: 26px;
    width: 200px;
    padding: 2px 28px 2px 6px; /* padding-right: .loader */
    border-radius: 10px 0 0 10px;
    border: 1px solid #8B9594;
    border-right: none;
    outline: none;
    background-color: #FFF;
}
#top .search .loader {
    display: none;
    position: absolute;
    right: 40px;
    top: 11px;
    width: 16px;
    height: 11px;
    background: url('/images/loading.gif');
}
#top .search button {
    position: absolute;
    right: 0;
    top: 0;
    width: 35px;
    height: 100%;
    border: 1px solid #8B9594;
    border-radius: 0 10px 10px 0;
    outline: none;
    background: url(/images/search.png) center center no-repeat, -webkit-linear-gradient(bottom, rgba(0, 124, 137, 0.4) 0%, rgba(0, 124, 137, 0.4) 50%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.2) 100%);
    background: url(/images/search.png) center center no-repeat, -moz-linear-gradient(bottom, rgba(0, 124, 137, 0.4) 0%, rgba(0, 124, 137, 0.4) 50%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.2) 100%);
    background: url(/images/search.png) center center no-repeat, -ms-linear-gradient(bottom, rgba(0, 124, 137, 0.4) 0%, rgba(0, 124, 137, 0.4) 50%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.2) 100%);
    background: url(/images/search.png) center center no-repeat, -o-linear-gradient(bottom, rgba(0, 124, 137, 0.4) 0%, rgba(0, 124, 137, 0.4) 50%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.2) 100%);
    background: url(/images/search.png) center center no-repeat, linear-gradient(bottom, rgba(0, 124, 137, 0.4) 0%, rgba(0, 124, 137, 0.4) 50%, rgba(0, 124, 137, 0.2) 50%, rgba(0, 124, 137, 0.2) 100%);
}
#top .notifications {
    position: absolute;
    z-index: 25;
    right: 10px;
    top: 10px;
    min-width: 200px;
}
#top .notifications li {
    position: relative;
    width: 228px;
    max-width: 228px;
    min-height: 32px;
    padding: 20px 20px 20px 52px;
    margin-bottom: 15px;
    border-radius: 10px;
    background: rgba(0,0,0,0.8);
    background-image: url('/images/logo32x32.png');
    background-repeat: no-repeat;
    background-position: 10px 20px;
    color: white;
    font-weight: bold;
    -moz-transition: all 1s ease-in-out;
    -webkit-transition: all 1s ease-in-out;
    -o-transition: all 1s ease-in-out;
    -ms-transition: all 1s ease-in-out;
    transition: all 1s ease-in-out;
}
#top .notifications li:last-of-type {
    margin-bottom: 0px;
}
#top .notifications li.hidden {
    opacity: 0;
}
#top .notifications li .close {
    display: none;
    position: absolute;
    top: 3px;
    right: 10px;
    cursor: pointer;
}
#top .notifications li:hover .close {
    display: block;
}
#top .menu {
    float: right;
    height: 32px;
    line-height: 32px;
}
#top .webstore {
    display: inline-block;
    width: 16px;
    height: 16px;
    position: relative;
    top: 3px;
    background: url(/images/chrome_16.png);
}
#top .settings,
#top .about {
    margin: 0 10px;
}
#top .username,
#top .about,
#top .webstore,
#top .settings {
    cursor: pointer;
    text-transform: uppercase;
    font-size: 13px;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
}
#top .menu .login-link {
    cursor: pointer;
    font-size: 13px;
    text-transform: uppercase;
    text-decoration: none;
    color: #000;
    text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
    padding: 5px 9px;
    margin-right: 10px;
    border: 1px solid #8B9594;
    border-radius: 10px 0 0 10px;
    background: rgba(0, 124, 137, 0.2);
}
#top .menu .login-link:hover {
    background: rgba(0, 124, 137, 0.4);
}
/* ... */

